.deploy/overlays/stage/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: neo-ticket-service
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - stage.neo-ticket.example.com
      secretName: neo-ticket-service-tls
  rules:
    - host: stage.neo-ticket.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: neo-ticket-service
                port:
                  name: http
